
2009-08-03 Add PathCollection; modify contourf to use complex
           paths instead of simple paths with cuts. - EF

2009-08-03 Fixed boilerplate.py so it doesn't break the ReST docs. - JKS

2009-07-31 Added cbook.get_mpl_data for urllib enabled fetching and
           cacheing of data needed for examples.  See
           examples/misc/mpl_data_demo.py - JDH

======================================================================

2009-07-31 Tagging 0.99.0.rc1 at 7314 - MGD

2009-07-30 Add set_cmap and register_cmap, and improve get_cmap,
           to provide convenient handling of user-generated
           colormaps. Reorganized _cm and cm modules. - EF

2009-07-28 Quiver speed improved, thanks to tip by Ray Speth. -EF

2009-07-27 Simplify argument handling code for plot method. -EF

2009-07-25 Allow "plot(1, 2, 'r*')" to work. - EF

2009-07-22 Added an 'interp' keyword to griddata so the faster linear
           interpolation method can be chosen.  Default is 'nn', so
           default behavior (using natural neighbor method) is unchanged (JSW)

2009-07-22 Improved boilerplate.py so that it generates the correct
           signatures for pyplot functions. - JKS

2009-07-19 Fixed the docstring of Axes.step to reflect the correct
           meaning of the kwargs "pre" and "post" - See SF bug
           https://sourceforge.net/tracker/index.php?func=detail&aid=2823304&group_id=80706&atid=560720
           - JDH

2009-07-18 Fix support for hatches without color fills to pdf and svg
           backends. Add an example of that to hatch_demo.py. - JKS

2009-07-17 Removed fossils from swig version of agg backend. - EF

2009-07-14 initial submission of the annotation guide. -JJL

2009-07-14 axes_grid : minor improvements in anchored_artists and
           inset_locator. -JJL

2009-07-14 Fix a few bugs in ConnectionStyle algorithms. Add
           ConnectionPatch class. -JJL

2009-07-11 Added a fillstyle Line2D property for half filled markers